# 18650_stats

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: 000_project-description.mdc  113_markdown-enhanced-style.mdc  114_katex-reference.mdc  131_ci-cd-github-actions.mdc  173_katex-math-showing-work.mdc  174_latex-symbol-formatting.mdc
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
stats/: CITATION.cff  Syllabus.md  __init__.py  cheatsheet.typ  dataset.py  features.py  lecture-notes.typ  plots.py  preamble.typ  rl-cheatsheet.typ
stats/modeling/: train.py
stats/ps01/: ps01.typ
stats/ps01/typst/: ps01.typ
